# legend-pygeom-hpges

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml  setup.cfg
.github/workflows/: distribution.yml  main.yml
docs/: Makefile
docs/source/: .py_api_exclude  conf.py  index.md  index.rst  manual.md  manual.rst
src/legendhpges/: __init__.py  base.py  bege.py  broaden.py  build_utils.py  draw.py  icpc.py  invcoax.py  make_hpge.py  materials.py  p00664b.py  ppc.py  ppcont.py  registry.py  semicoax.py  utils.py  v02160a.py  v02162b.py  v07646a.py
src/pygeomhpges/: __init__.py  base.py  build_utils.py  draw.py  make_hpge.py  p00664b.py  ppc.py  utils.py  v02160a.py  v06649.py
tests/: test_bege.py  test_core.py  test_det_profile.py  test_det_properties.py  test_distance.py  test_icpc.json  test_icpc.py  test_materials.py  test_ppc.py  test_sc.py  test_utils.py
tests/config/: B00091A.json  C00ANG2.json  P00662B.json  V05266A.json
tests/configs/: P00664B.json  V02160A.json  V02162B.json  V06649M.json  V07646A.json
