[metadata]
name = legend_geom_hpges
version = attr: legendhpges._version.version
description = Geometry management for LEGEND HPGE detectors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/legend-exp/legend-pygeom-hpges
author = Yorck Ramachers
author_email = Y.Ramachers@warwick.ac.uk
maintainer = The LEGEND Collaboration
license = MIT
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
packages = find:
install_requires =
    numpy
    pint
    pyg4ometry
    pylegendmeta
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
all =
    legend-pygeom-hpges[docs,test]
docs =
    furo
    myst-parser
    sphinx
    sphinx-copybutton
test =
    pre-commit
    pylegendtestdata
    pytest>=6.0
    pytest-cov

[flake8]
extend-ignore = E203, E501, D10
